feat: liga inferência de espécie (RF018) ao modelo TensorFlow real