@@ -1,6 +1,5 @@
 package com.extinction.api.ai;
 
-import ai.djl.Application;
 import ai.djl.MalformedModelException;
 import ai.djl.inference.Predictor;
 import ai.djl.modality.Classifications;
@@ -14,51 +13,57 @@ import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 
 /**
  * Implementação real de {@link SpeciesIdentificationPort} via DJL + engine TensorFlow.
  *
- * Hoje carrega um classificador genérico pré-treinado no ImageNet (via model zoo do
- * próprio DJL) — não há ainda um modelo treinado nas espécies brasileiras do catálogo
- * (isso depende de curadoria de dataset + treino em Python/Colab, fora deste ambiente,
- * ver Recomendacao-Backend-Extinction.md seção 6). Os rótulos do ImageNet que têm
- * correspondência plausível com o catálogo são mapeados em {@link #ROTULOS_IMAGENET};
- * o resto é descartado. Quando o time treinar um modelo de verdade, a troca é só aqui
- * dentro — nada em controller/service/frontend depende de como a inferência é feita.
+ * Carrega o SavedModel treinado por ml/scripts/train_model.py (transfer learning sobre
+ * MobileNetV2, ~11 mil espécies do GBIF -- ver ml/README.md) a partir de {@code
+ * app.ml.model-dir}. Só devolve o rótulo bruto do synset (nome científico, com
+ * autoria) e a confiança -- resolver isso pro catálogo (criar/reaproveitar
+ * {@code Especie}, aplicar limiar de confiança mínima) é responsabilidade de
+ * {@link com.extinction.api.service.EspecieIdentificationService}, não daqui.
  */
 @Component
 public class TFmodel implements SpeciesIdentificationPort {
 
     private static final Logger log = LoggerFactory.getLogger(TFmodel.class);
 
-    /** Rótulo do ImageNet (substring, case-insensitive) → nomeCientifico no nosso catálogo. */
-    private static final Map<String, String> ROTULOS_IMAGENET = Map.of(
-            "jaguar", "Panthera onca",
-            "maned wolf", "Chrysocyon brachyurus",
-            "macaw", "Anodorhynchus leari"
-    );
+    private static final int IMG_SIZE = 224;
+    private static final int TOP_K = 5;
+
+    private final Path modelDir;
 
     private ZooModel<Image, Classifications> model;
 
+    public TFmodel(@Value("${app.ml.model-dir}") String modelDir) {
+        this.modelDir = Path.of(modelDir).toAbsolutePath().normalize();
+    }
+
     @PostConstruct
     public void carregarModelo() throws ModelNotFoundException, MalformedModelException, IOException {
+        Path savedModelDir = modelDir.resolve("saved_model");
+        Path synsetPath = modelDir.resolve("synset.txt");
+        List<String> synset = Files.readAllLines(synsetPath, StandardCharsets.UTF_8);
+
         Criteria<Image, Classifications> criteria = Criteria.builder()
-                .optApplication(Application.CV.IMAGE_CLASSIFICATION)
                 .setTypes(Image.class, Classifications.class)
-                .optFilter("dataset", "imagenet")
+                .optModelPath(savedModelDir)
                 .optEngine("TensorFlow")
+                .optTranslator(new SpeciesClassifierTranslator(IMG_SIZE, synset))
                 .build();
         model = criteria.loadModel();
-        log.info("TFmodel: modelo de classificação de imagem carregado ({})", model.getName());
+        log.info("TFmodel: SavedModel carregado de {} ({} classes)", savedModelDir, synset.size());
     }
 
     @PreDestroy
@@ -75,30 +80,17 @@ public class TFmodel implements SpeciesIdentificationPort {
             Image image = ImageFactory.getInstance().fromInputStream(new ByteArrayInputStream(imagem));
             Classifications classifications = predictor.predict(image);
 
-            List<PredictionResult> resultado = classifications.topK(5).stream()
-                    .map(item -> {
-                        String nomeCientifico = mapearParaCatalogo(item.getClassName());
-                        double confianca = Math.round(item.getProbability() * 10000) / 100.0;
-                        return nomeCientifico != null ? new PredictionResult(nomeCientifico, confianca) : null;
-                    })
-                    .filter(java.util.Objects::nonNull)
-                    .collect(Collectors.toList());
+            List<PredictionResult> resultado = classifications.topK(TOP_K).stream()
+                    .map(item -> new PredictionResult(
+                            item.getClassName(),
+                            Math.round(item.getProbability() * 10000) / 100.0))
+                    .toList();
 
-            log.debug("TFmodel: top-5 bruto do ImageNet = {}", classifications.topK(5));
+            log.debug("TFmodel: top-{} = {}", TOP_K, resultado);
             return CompletableFuture.completedFuture(resultado);
         } catch (TranslateException | IOException e) {
             log.error("TFmodel: falha ao rodar inferência", e);
             return CompletableFuture.completedFuture(List.of());
         }
-    }
-
-    private String mapearParaCatalogo(String rotuloImagenet) {
-        String rotulo = rotuloImagenet.toLowerCase(Locale.ROOT);
-        for (Map.Entry<String, String> entry : ROTULOS_IMAGENET.entrySet()) {
-            if (rotulo.contains(entry.getKey())) {
-                return entry.getValue();
-            }
-        }
-        return null;
     }
 }
